<resources>
    <string name="app_name">Virtual Wiscard</string>
    <string name="balance_banner">Wiscard Balance</string>

    //NFC STUFF POSSIBLY UPDATE
    <string name="service_description">Virtual Wiscard NFC Service</string>
    <string name="aid_group">Wiscard AID Group</string>

    //Change these values when we implement database
    <string name="student_name_placeholder">BUCKY BADGER</string>
    <string name="student_id_placeholder">012 345 6789</string>
    <string name="student_occupation_placeholder">STUDENT</string>
    <string name="expiration_date_placeholder">EXPIRES: 6/26/2077</string>
    <string name="issue_date_placeholder">ISSUED: 6/26/1848 ISSUE CODE 1</string>
    <string name="nfc_not_supported_message">NFC is not supported on this device. Some features may not work.</string>


</resources>