<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <!-- Red Top Banner -->
    <RelativeLayout
        android:id="@+id/topBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B71C1C"
        android:paddingTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- UW-Madison Logo on the Left -->
        <ImageView
            android:id="@+id/uwLogo"
            android:layout_width="56dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/uw_logo" />

        <!-- Title Text in the Center -->
        <TextView
            android:id="@+id/bannerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:layout_centerInParent="true" />

        <com.nightonke.boommenu.BoomMenuButton
            android:id="@+id/bmb"
            app:bmb_buttonEnum="ham"
            app:bmb_piecePlaceEnum="piecePlace_ham_2"
            app:bmb_buttonPlaceEnum="buttonPlace_ham_2"
            app:bmb_normalColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <!-- University Banner Image -->
    <ImageView
        android:id="@+id/universityBanner"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:src="@drawable/university_banner"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/topBanner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Profile Image with Black Rounded Border -->
    <androidx.cardview.widget.CardView
        android:id="@+id/profileImageFrame"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginTop="-65dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/universityBanner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/bucky_badger"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/RoundedImage" />


</androidx.cardview.widget.CardView>

    <!-- Gray Background Box for Student Information with Rounded Corners -->
    <androidx.cardview.widget.CardView
        android:id="@+id/infoBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/profileImageFrame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="16dp"
        android:backgroundTint="#E0E0E0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Student Name -->
        <TextView
            android:id="@+id/studentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_name_placeholder"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:gravity="center" />

        <!-- Student ID -->
        <TextView
            android:id="@+id/studentID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_id_placeholder"
            android:textSize="16sp"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_marginTop="2dp" />

        <!-- Occupation -->
        <TextView
            android:id="@+id/studentOccupation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_occupation_placeholder"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:gravity="center"
            android:layout_marginTop="4dp" />


    </LinearLayout>
</androidx.cardview.widget.CardView>

    <!-- Error message for unsupported NFC -->
    <TextView
        android:id="@+id/nfcErrorMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/nfc_not_supported_message"
        android:textSize="16sp"
        android:textColor="@android:color/holo_red_dark"
        android:gravity="center"
        android:padding="8dp"
        android:background="@android:color/white"
        android:elevation="2dp"
        app:layout_constraintBottom_toTopOf="@id/wiscardLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoBox" />


    <!-- WISCard Logo at the Bottom -->
    <ImageView
        android:id="@+id/wiscardLogo"
        android:layout_width="365dp"
        android:layout_height="138dp"
        android:src="@drawable/wiscard_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
